Revise site configuration for personal homepage
Updated title and description for personal website, changed theme to minima, and added markdown and header pages.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
-theme: minimal
-title: 苏绚
-description: Personal website
+title: Su Xuan
+description: Personal academic homepage
+theme: minima
+
+markdown: kramdown
+
+header_pages:
+  - notes.md
+  - others.md
+
